# mev_commit_timescaldb

./: Dockerfile  README.md  db.py  docker-compose.yml  entrypoint.sh  fetch_l1_txs.py  main.py  pipe.py  pyproject.toml  setup_postgrest.md
pipeline/: db.py  events.py  materialized_views.py
sql/: grant_privileges.sql
sql/init/: 01-init-database.sql
sql/postgrest/: init-postgrest.sql
sql/refresh_scheduler/: refresh_materialized_views.sh
sql/views/: preconf_txs.sql  total_preconf_stats.sql
